2010-05-12  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/mol2format.cpp: Add support for reading charge model
	descriptors from mol2 files. Should now allow round-tripping
	between mol2 -> mol2.

2010-05-12  Noel O'Boyle

	* src/charges/qtpie.cpp, qeq.cpp: Replace isnan with IsNan for
	cross-platform (i.e. MSVC) compatability. Still won't compile on
	Windows as is missing "erf" function (there is an implementation in
	boost which can probably be used).

2010-05-12  Noel O'Boyle

	* src/forcefield.cpp: Change WeightedRotorSearch to behave more like
	SystematicRotorSearch in that it now clears existing conformers,
	and stores conformers and energies found during the search.

2010-05-11  Noel O'Boyle

	* scripts/CMakeLists.txt, openbabel-java.i, openbabel-python.i: Bring
	the Java bindings back to life. Bring the python and java SWIG
	interface files into synch.

2010-05-11  Noel O'Boyle

	* windows-vc2008/libs, x64_default_build.bat: Adding libraries and
	cmake bat for x64 build. Move i386 libraries to libs/i386 to keep
	things symmetrical.
	* src/formats/CMakeLists.txt: Update for new location of libstdinchi.

2010-05-10  Chris Morley

	* src/formats/svgformat.cpp: draw terminal C atoms explicitly by default.

	* src/formats/xml/cmlformat.cpp: hack to allow CML in molpro output to
	  be read.
	  No implict H or spinmultiplicity assignment if any bonds have zero
	  order.
	
2010-05-09  Noel O'Boyle

	* CMakeLists.txt, scripts/CMakeLists.txt: The final step in getting the
	Python bindings ready for release - separating the running of SWIG from
	the compiling of the bindings. -DRUN_SWIG and -DPYTHON_BINDINGS are the
	relevant variables. If you try to compile the bindings and they are not
	present, the warning message recommends you use -DRUN_SWIG.

2010-05-07  Chris Morley

	* src/transform.cpp: Add option suggested by Noel:
	-r Remove all but the largest contiguous fragment
	(StripSalts)
	
2010-05-07  Noel O'Boyle
